static/css/custom.css
/* ... */
/* This container is needed to position the front and back side */
.flip-card-inner {
  position: relative;
  width: 100%;
  height: 100%;
  text-align: center;
  transition: transform 0.8s;
  transform-style: preserve-3d;
}
/* Do an horizontal flip when you move the mouse over the flip box container */
.flip-card:hover .flip-card-inner {
  transform: rotateY(180deg);
}
/* Position the front and back side */
.flip-card-front, .flip-card-back {
  position: absolute;
  width: 90%;
  height: 100%;
  -webkit-backface-visibility: hidden; /* Safari */
  backface-visibility: hidden;
}
/* Style the back side */
.flip-card-back {
  background-color: rgba(37, 150, 190, 0.7);
  color: white;
  transform: rotateY(180deg);
}
#team-image {
  width: 93%;
  height: 400px;
}

.gtco-testimonials {
  .card {
    background: #fff;
    box-shadow: 0 8px 30px -7px #c9dff0;
    margin: 0 20px;
    padding: 0 10px;
    border-radius: 20px;
    border: 0;

    .card-img-top {
      max-width: 100px;
      border-radius: 50%;
      margin: 15px auto 0;
      box-shadow: 0 8px 20px -4px #95abbb;
      width: 100px;
      height: 100px;
    }

    h5 {
      color: #01b0f8;
      font-size: 21px;
      line-height: 1.3;

      span {
        font-size: 18px;
        color: #666666;
      }
    }

    p {
      font-size: 16px;
      color: #999999;
      padding-bottom: 15px;
    }

    ul {
      display: inline-flex;
      list-style: none;
      font-size: 20px;
      padding-left: 0;
    }
  }
}

/* GALLERY SECTION */

.gallery .responsive-container-block {
  min-height: 75px;
  height: fit-content;
  width: 100%;
  padding-top: 10px;
  padding-right: 10px;
  padding-bottom: 10px;
  padding-left: 10px;
  display: flex;
  flex-wrap: wrap;
  margin-top: 0px;
  margin-right: auto;
  margin-bottom: 0px;
  margin-left: auto;
  justify-content: flex-start;
}

.gallery .responsive-container-block.bigContainer {
  padding-top: 10px;
  padding-right: 30px;
  padding-bottom: 10px;
  padding-left: 30px;
}

.gallery .responsive-container-block.Container {
  align-items: center;
  justify-content: space-evenly;
}

.gallery .overlay {
  position: fixed;
  background-image: initial;
  background-position-x: initial;
  background-position-y: initial;
  background-size: initial;
  background-repeat-x: initial;
  background-repeat-y: initial;
  background-attachment: initial;
  background-origin: initial;
  background-clip: initial;
  background-color: rgba(71, 69, 69, 0.7);
  height: 100%;
  width: 100%;
  max-height: 100%;
  top: 0px;
  left: 0px;
  z-index: 100;
  display: none;
  padding-top: 20px;
  padding-right: 20px;
  padding-bottom: 20px;
  padding-left: 20px;
}

.gallery .overlay-inner {
  top: 50%;
  right: 0px;
  bottom: 0px;
  left: 50%;
  transform: translate(-50%, -50%);
  background-image: initial;
  background-position-x: initial;
  background-position-y: initial;
  background-size: initial;
  background-repeat-x: initial;
  background-repeat-y: initial;
  background-attachment: initial;
  background-origin: initial;
  background-clip: initial;
  background-color: white;
  width: fit-content;
  padding-top: 35px;
  padding-right: 20px;
  padding-bottom: 20px;
  padding-left: 20px;
  position: relative;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
  border-bottom-right-radius: 10px;
  border-bottom-left-radius: 10px;
  opacity: 1;
  max-width: 50%;
  max-height: 100%;
}

.gallery .close {
  position: absolute;
  top: 9px;
  right: 15px;
  background-image: none;
  background-position-x: initial;
  background-position-y: initial;
  background-size: initial;
  background-repeat-x: initial;
  background-repeat-y: initial;
  background-attachment: initial;
  background-origin: initial;
  background-clip: initial;
  background-color: initial;
  outline-color: initial;
  outline-style: initial;
  outline-width: 0px;
  color: #474545;
  border-top-width: 0px;
  border-right-width: 0px;
  border-bottom-width: 0px;
  border-left-width: 0px;
  border-top-style: initial;
  border-right-style: initial;
  border-bottom-style: initial;
  border-left-style: initial;
  border-top-color: initial;
  border-right-color: initial;
  border-bottom-color: initial;
  border-left-color: initial;
  border-image-source: initial;
  border-image-slice: initial;
  border-image-width: initial;
  border-image-outset: initial;
  border-image-repeat: initial;
  text-transform: uppercase;
  letter-spacing: 2px;
}

.gallery .overlay-inner .hdImgs {
  width: fit-content;
  height: calc(80% - 55px);
  display: flex;
}

.gallery .overlay-inner img {
  max-height: 100%;
  max-width: 100%;
  transform: none;
}

.gallery .close:hover {
  cursor: pointer;
}

.gallery .project {
  position: relative;
  width: 33%;
  padding-top: 10px;
  padding-right: 10px;
  padding-bottom: 10px;
  padding-left: 10px;
}

.gallery .btn-box {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  display: none;
}

.gallery .project:hover .btn-box {
  display: block;
}

.gallery .btn {
  cursor: pointer;
}

.gallery .smallImage {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

@media (max-width: 768px) {
  .gallery .project {
    width: 50%;
  }

  .gallery .overlay-inner {
    width: 90%;
  }
}

@media (max-width: 500px) {
  .gallery .project {
    width: 100%;
    padding-top: 10px;
    padding-right: 0px;
    padding-bottom: 10px;
    padding-left: 0px;
  }

  .gallery .responsive-container-block.bigContainer {
    padding-top: 10px;
    padding-right: 20px;
    padding-bottom: 10px;
    padding-left: 20px;
  }

  .gallery .overlay-inner {
    max-width: 90%;
  }
}

/* SERVICES SECTION */

.heading h2 span {
  color: var(--primary-accent);
}
.carousel-shadow .owl-stage-outer {
  margin: -15px -15px 0;
  padding: 15px;
}
.we-offer-area .our-offer-carousel .owl-dots .owl-dot span {
background: #ffffff none repeat scroll 0 0;
  border: 2px solid;
  height: 15px;
  margin: 0 5px;
  width: 15px;
}
/* ... */

